# car-store-backend

./: .gitignore  README.md  cars.json  main.py  pyproject.toml
app/: config.py  main.py  models.py
app/models/: __init__.py  car.py
app/routers/: cars.py  chat.py
app/services/: car_service.py  chat_agent.py  conversations_service.py  file_service.py
data/: cars.json
tests/: test_cars.py
